Read dir kateconfig on view creation

BUG: 489600